--- a/src/app/pages/status/cadastro-status/cadastro-status.component.html
+++ b/src/app/pages/status/cadastro-status/cadastro-status.component.html
@@ -1,6 +1,6 @@
 <main>
   <p-card styleClass="card-adjust">
-    <h4>{{ editando ? "EDIÇÃO DE" : "CADASTRO DE" }} STATUS</h4>
+    <h4>{{ editando ? "Edição de" : "Cadastro de" }} Status</h4>
     <div class="flex justify-content-start mb-2">
       <div>
         <button pButton pRipple type="button" class="p-button-raised p-button-warning" icon="pi pi-caret-left"
