--- a/src/app/pages/agendamentos/cadastro-agendamento/cadastro-agendamento.component.html
+++ b/src/app/pages/agendamentos/cadastro-agendamento/cadastro-agendamento.component.html
@@ -11,7 +11,7 @@
           icon="pi pi-caret-left"
           pTooltip="Voltar"
           tooltipPosition="top"
-          routerLink="/agendamento"
+          routerLink="/agendamentos"
         ></button>
       </div>
     </div>
