--- a/src/app/pages/agendamentos/lista-agendamentos/lista-agendamentos.component.html
+++ b/src/app/pages/agendamentos/lista-agendamentos/lista-agendamentos.component.html
@@ -1,6 +1,6 @@
 <main>
     <p-card styleClass="card-adjust">
-      <h4>AGENDAMENTOS</h4>
+      <h4>Agendamentos</h4>
       <div class="flex justify-content-between mb-2">
         <div class="flex justify-content-start mb-2">
           <div>
@@ -139,7 +139,7 @@
         </ng-template>
         <ng-template pTemplate="emptymessage" let-columns>
           <tr>
-            <td>
+            <td colspan="8">
               <p class="emptyMessage">Nenhum registro encontrado...</p>
             </td>
           </tr>
