--- a/src/app/pages/processos/lista-processos/lista-processos.component.html
+++ b/src/app/pages/processos/lista-processos/lista-processos.component.html
@@ -1,6 +1,6 @@
 <main>
   <p-card styleClass="card-adjust">
-    <h4>PROCESSOS</h4>
+    <h4>Processos</h4>
     <div class="flex justify-content-between mb-2">
       <div class="flex justify-content-start mb-2">
         <div>
