--- a/src/app/pages/processos/cadastro-processo/cadastro-processo.component.html
+++ b/src/app/pages/processos/cadastro-processo/cadastro-processo.component.html
@@ -1,6 +1,6 @@
 <main>
   <p-card styleClass="card-adjust">
-    <h4>{{ editando ? "EDIÇÃO DE" : "CADASTRO DE" }} Processo</h4>
+    <h4>{{ editando ? "Edição de" : "Cadastro de" }} Processo</h4>
     <div class="flex justify-content-start mb-2">
       <div>
         <button
