--- a/src/app/core/layout/navbar/navbar.component.html
+++ b/src/app/core/layout/navbar/navbar.component.html
@@ -1,13 +1,25 @@
 <div class="colorNav">
   <div class="flex justify-content-between flex-wrap">
-    <span class="cursor-pointer">
-      <i
-        class="pi pi-bars text-white"
-        (click)="sibebar = true"
-        style="font-size: 1rem"
-      ></i>
-    </span>
-    <i class="pi pi-arrow-right text-white cursor-pointer" style="font-size: 1rem" (click)="confirmarLogout()"></i>
+    <div>
+      <span class="cursor-pointer">
+        <i
+          class="pi pi-bars text-white"
+          (click)="sibebar = true"
+          style="font-size: 1.2rem"
+        ></i>
+      </span>
+      <span class="cursor-pointer ml-2">
+        <i
+          class="pi pi-home text-white"
+          style="font-size: 1.2rem"
+          routerLink="/dashboard"
+        ></i>
+      </span>
+    </div>
+   <div>
+    
+   </div>
+    <i class="pi pi-arrow-right text-white cursor-pointer" style="font-size: 1.2rem" (click)="confirmarLogout()"></i>
     <!-- <button pButton class="p-button-text btnSenha" icon="pi pi-chevron-right" label="Sair"
     (click)="confirmarLogout(sair)"></button> -->
 </div>
