--- a/src/app/pages/processos/cadastro-processo/cadastro-processo.component.html
+++ b/src/app/pages/processos/cadastro-processo/cadastro-processo.component.html
@@ -111,7 +111,7 @@
           ></app-message>
         </div>
         
-        <div class="col-12 md:col-6 lg:col-4" hidden="novo" >
+        <div class="col-12 md:col-6 lg:col-4"  >
           <h6><span class="obrigatorio" >*</span>Status</h6>
           <p-dropdown
           styleClass="w-full" [options]="statusdescricao"
